# glitchedhttps

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  build-mingw.sh  build.bat  build.sh  codecov.yml  doxyfile  run-tests.sh  test.bat  test.sh
.circleci/: config.yml
docs/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen-awesome.css  files.html  functions.html  functions_vars.html  glitchedhttps_8h.html  glitchedhttps_8h__incl.dot  glitchedhttps_8h__incl.map  glitchedhttps_8h__incl.md5  glitchedhttps_8h_source.html  glitchedhttps__api_8h.html  glitchedhttps__api_8h__dep__incl.map  glitchedhttps__api_8h__dep__incl.md5  glitchedhttps__api_8h_source.html  glitchedhttps__cacerts_8h.html  glitchedhttps__cacerts_8h__dep__incl.dot  glitchedhttps__cacerts_8h__dep__incl.map  glitchedhttps__cacerts_8h__dep__incl.md5  glitchedhttps__cacerts_8h__incl.map  glitchedhttps__cacerts_8h__incl.md5  glitchedhttps__cacerts_8h_source.html  glitchedhttps__debug_8h.html  glitchedhttps__debug_8h__dep__incl.dot  glitchedhttps__debug_8h__dep__incl.map  glitchedhttps__debug_8h__dep__incl.md5  glitchedhttps__debug_8h__incl.dot  glitchedhttps__debug_8h__incl.map  glitchedhttps__debug_8h__incl.md5  glitchedhttps__debug_8h_source.html  glitchedhttps__exitcodes_8h.html  glitchedhttps__exitcodes_8h__dep__incl.map  glitchedhttps__exitcodes_8h__dep__incl.md5  glitchedhttps__exitcodes_8h_source.html  glitchedhttps__guid_8h.html  glitchedhttps__guid_8h__dep__incl.dot  glitchedhttps__guid_8h__dep__incl.map  glitchedhttps__guid_8h__dep__incl.md5  glitchedhttps__guid_8h__incl.dot  (+78 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
examples/: CMakeLists.txt
examples/delete/: main.c
examples/get/: main.c
examples/post/: main.c
examples/put/: main.c
include/: glitchedhttps.h  glitchedhttps_api.h  glitchedhttps_cacerts.h  glitchedhttps_debug.h  glitchedhttps_exitcodes.h  glitchedhttps_guid.h  glitchedhttps_header.h  glitchedhttps_method.h  glitchedhttps_request.h  glitchedhttps_response.h  glitchedhttps_strutil.h
lib/: README.md
lib/chillbuff/tests/: README.md
lib/mbedtls/tests/data_files/: test-ca.server1.db  test-ca.server1.future-crl.db
src/: glitchedhttps.c  glitchedhttps_cacerts.c  glitchedhttps_debug.c  glitchedhttps_guid.c  glitchedhttps_header.c  glitchedhttps_method.c  glitchedhttps_response.c
tests/: CMakeLists.txt  README.md  tests.c
